2003-10-17  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in
	* configure.in
	* 16x16/stock/code/stock_script.png
	* 24x24/stock/code/stock_script.png
	* 32x32/stock/code/stock_script.png
	* 48x48/stock/code/stock_script.png
	* {32x32/48x48}/stock/Makefile.am
	* {16x16,24x24,32x32,48x48}/stock/code/Makefile.am: liked the emblem in
	  GIMP's preferences. Will be handy I'm sure.
	
	* 48x48/emblems/emblem-OK.icon.in
	* 48x48/emblems/emblem-OK.png
	* 48x48/emblems/emblem-certified.icon.in
	* 48x48/emblems/emblem-certified.png
	* 48x48/emblems/emblem-generic.icon.in
	* 48x48/emblems/emblem-generic.png
	* 48x48/emblems/emblem-important.icon.in
	* 48x48/emblems/emblem-important.png
	* 48x48/emblems/emblem-special.png
	* 48x48/emblems/Makefile.am: more emblems as bitmaps

2003-10-16  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/io/stock_bluetooth.png
	* 24x24/stock/io/stock_bluetooth.png
	* 32x32/stock/io/stock_bluetooth.png
	* 48x48/stock/io/stock_bluetooth.png
	* {16x16,24x24,32x32,48x48}/stock/io/Makefile.am: Bluetooth
	  devices

2003-10-15  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_example.png
	* 24x24/stock/generic/stock_example.png
	* 32x32/stock/generic/stock_example.png
	* 48x48/stock/generic/stock_example.png
	* {16x16,24x24,32x32,48x48}/stock/generic/Makefile.am: example

2003-10-14  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_weather-cloudy.png
	* 16x16/stock/generic/stock_weather-few-clouds.png
	* 16x16/stock/generic/stock_weather-fog.png
	* 16x16/stock/generic/stock_weather-showers.png
	* 16x16/stock/generic/stock_weather-snow.png
	* 16x16/stock/generic/stock_weather-storm.png
	* 16x16/stock/generic/stock_weather-sunny.png
	* 48x48/stock/generic/stock_weather-cloudy.png
	* 48x48/stock/generic/stock_weather-few-clouds.png
	* 48x48/stock/generic/stock_weather-showers.png
	* 48x48/stock/generic/stock_weather-snow.png
	* 48x48/stock/generic/stock_weather-storm.png
	* 48x48/stock/generic/stock_weather-sunny.png