@@ -1,7 +1,7 @@
 [Icon Theme]
-_Name=Gnome
-_Comment=Default Gnome Theme
-Directories=192x192/apps,192x192/devices,192x192/emblems,192x192/filesystems,192x192/mimetypes,96x96/apps,96x96/devices,96x96/emblems,96x96/filesystems,96x96/mimetypes,72x72/apps,72x72/devices,72x72/emblems,72x72/filesystems,72x72/mimetypes,48x48/apps,48x48/devices,48x48/emblems,48x48/filesystems,48x48/mimetypes,48x48/stock/code,48x48/stock/document,48x48/stock/generic,48x48/stock/io,48x48/stock/net,36x36/apps,36x36/devices,36x36/emblems,36x36/filesystems,36x36/mimetypes,36x36/stock/document,36x36/stock/generic,32x32/apps,32x32/filesystems,32x32/mimetypes,32x32/stock/code,32x32/stock/chart,32x32/stock/data,32x32/stock/document,32x32/stock/generic,32x32/stock/io,32x32/stock/media,32x32/stock/net,24x24/apps,24x24/devices,24x24/emblems,24x24/filesystems,24x24/mimetypes,24x24/stock/chart,24x24/stock/code,24x24/stock/data,24x24/stock/document,24x24/stock/form,24x24/stock/generic,24x24/stock/image,24x24/stock/io,24x24/stock/media,24x24/stock/navigation,24x24/stock/net,24x24/stock/object,24x24/stock/table,24x24/stock/text,16x16/apps,16x16/filesystems,16x16/mimetypes,16x16/stock/chart,16x16/stock/code,16x16/stock/code,16x16/stock/data,16x16/stock/document,16x16/stock/form,16x16/stock/generic,16x16/stock/image,16x16/stock/io,16x16/stock/media,16x16/stock/navigation,16x16/stock/net,16x16/stock/object,16x16/stock/table,16x16/stock/text,12x12/apps,12x12/devices,12x12/emblems,12x12/filesystems,12x12/mimetypes,scalable/apps,scalable/devices,scalable/emblems,scalable/filesystems,scalable/mimetypes
+_Name=GNOME
+_Comment=Default GNOME Theme
+Directories=192x192/apps,192x192/devices,192x192/emblems,192x192/filesystems,192x192/mimetypes,96x96/apps,96x96/devices,96x96/emblems,96x96/filesystems,96x96/mimetypes,72x72/apps,72x72/devices,72x72/emblems,72x72/filesystems,72x72/mimetypes,48x48/apps,48x48/devices,48x48/emblems,48x48/filesystems,48x48/mimetypes,48x48/stock/code,48x48/stock/document,48x48/stock/generic,48x48/stock/io,48x48/stock/net,36x36/apps,36x36/devices,36x36/emblems,36x36/filesystems,36x36/mimetypes,36x36/stock/document,36x36/stock/generic,32x32/apps,32x32/filesystems,32x32/mimetypes,32x32/stock/code,32x32/stock/chart,32x32/stock/data,32x32/stock/document,32x32/stock/generic,32x32/stock/io,32x32/stock/media,32x32/stock/net,32x32/stock/object,24x24/apps,24x24/devices,24x24/emblems,24x24/filesystems,24x24/mimetypes,24x24/stock/chart,24x24/stock/code,24x24/stock/data,24x24/stock/document,24x24/stock/form,24x24/stock/generic,24x24/stock/image,24x24/stock/io,24x24/stock/media,24x24/stock/navigation,24x24/stock/net,24x24/stock/object,24x24/stock/table,24x24/stock/text,16x16/apps,16x16/filesystems,16x16/mimetypes,16x16/stock/chart,16x16/stock/code,16x16/stock/code,16x16/stock/data,16x16/stock/document,16x16/stock/form,16x16/stock/generic,16x16/stock/image,16x16/stock/io,16x16/stock/media,16x16/stock/navigation,16x16/stock/net,16x16/stock/object,16x16/stock/table,16x16/stock/text,12x12/apps,12x12/devices,12x12/emblems,12x12/filesystems,12x12/mimetypes,scalable/apps,scalable/devices,scalable/emblems,scalable/filesystems,scalable/mimetypes
 
 [192x192/apps]
 Size=192
@@ -214,6 +214,11 @@ Context=Stock
 Type=Scalable
 
 [32x32/stock/net]
+Size=32
+Context=Stock
+Type=Scalable
+
+[32x32/stock/object]
 Size=32
 Context=Stock
 Type=Scalable
