@@ -2,27 +2,31 @@
 [type: gettext/ini] 48x48/emblems/emblem-art.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-bin.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-camera.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-certified.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-cool.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-danger.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-documents.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-favorite.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-generic.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-handshake.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-important.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-mail.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-marketing.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-money.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-multimedia.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-ohno.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-OK.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-package.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-people.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-pictures.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-plan.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-presentation.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-sales.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-sound.icon.in
+[type: gettext/ini] 48x48/emblems/emblem-special.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-web.icon.in
-[type: gettext/ini] scalable/emblems/emblem-certified.icon.in
 [type: gettext/ini] scalable/emblems/emblem-distinguished.icon.in
 [type: gettext/ini] scalable/emblems/emblem-draft.icon.in
-[type: gettext/ini] scalable/emblems/emblem-generic.icon.in
-[type: gettext/ini] scalable/emblems/emblem-important.icon.in
 [type: gettext/ini] scalable/emblems/emblem-new.icon.in
-[type: gettext/ini] scalable/emblems/emblem-OK.icon.in
 [type: gettext/ini] scalable/emblems/emblem-personal.icon.in
-[type: gettext/ini] scalable/emblems/emblem-special.icon.in
 [type: gettext/ini] scalable/emblems/emblem-urgent.icon.in
