@@ -1,3 +1,14 @@
+2003-10-20  Jakub Steiner <jimmac@ximian.com>
+
+	minor indentation a various updates patch 
+	from Luca Ferretti <elle.uca@infinito.it>:
+	
+	* use GNOME (not Gnome) in index.theme
+	* add missed 32x32/stock/object to index.theme
+	* remove from scalable/emblems/Makefile.am replaced emblems
+	* add some missed icon.in files in po/POTFILES.in 
+	* update entry for replaced emblems in POTFILES.in
+
 2003-10-17  Jakub Steiner <jimmac@ximian.com>
 
 	* index.theme.in
